HeapRetentionTest.java Test is failing on jdk9/dev

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b99

      HeapRetentionTest.java is failing on jdk9/dev

      The concurrent mark state machine has been tightened and fixed. After this some user initiated concurrent GC requests might not be honored, if issued at the wrong time.

            Assignee:
            Stefan Johansson
            Reporter:
            Alejandro Murillo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: