8143251: HeapRetentionTest.java Test is failing on jdk9/dev

Reviewed-by: tschatzl, david